<resources>
    <string name="app_name">Toki Toki Inventory Management Android</string>
    <string name="back">Go back</string>
    <string name="sort_by_prompt">Sort By</string>
    <string name="deliveries">Deliveries</string>
    <string name="deliveriesnav">deliveriesnav</string>
    <string name="sortbyic">Sortbyic</string>
    <string name="order_no_1234">Order No: 1234</string>
    <string name="to_receive">To Receive</string>
    <string name="order_id_1235">Order ID:1235</string>
    <string name="to_receive2">To Receive</string>
    <string name="order_id_1973">Order ID: 1973</string>
    <string name="order_id_1975">Order ID: 1975</string>
    <string name="order_id_1974">Order ID: 1974</string>
    <string name="cancelled">Cancelled</string>
    <string name="garlic">Garlic</string>
    <string name="_20kg">20kg</string>
    <string name="_10_kg">10 kg</string>
    <string name="_50_kg">50 kg</string>
    <string name="carrots">Carrots</string>
    <string name="eggplants">Eggplants</string>
    <string name="tofu">Tofu</string>
    <string name="pork_belly">Pork Belly</string>
    <string name="order_s">Order/s</string>
    <string name="supplier">Supplier</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="quantity">Quantity</string>
    <string name="x">X</string>
    <string name="delivered">Delivered</string>
    <string name="soy_sauce">Soy Sauce</string>
    <string name="_20_l">20 L</string>
    <string name="vinegar">Vinegar</string>
    <string name="a">A</string>
    <string name="deliveriesnav2">deliveriesnav2</string>
    <string name="deliveriesnav3">deliveriesnav3</string>
    <string name="order_id_1989">Order ID: 1989</string>
    <string name="order_id_1976">Order ID: 1976</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="supplier_s_id">Supplier\'s ID</string>
    <string name="enter_supplier_s_id">Enter Supplier\'s ID</string>
    <string name="supplier_s_name">Supplier\'s Name</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="location">Location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="date">Date</string>
    <string name="tokyologo">tokyologo</string>
    <string name="branch">Branch</string>
    <string name="dagupan">Dagupan</string>
    <string name="_2400_arellano_street_dagupan_city_pangasinan">2400, Arellano Street, Dagupan City, Pangasinan</string>
    <string name="date_placed">Date Placed</string>
    <string name="is_on_its_way">is on its way</string>
    <string name="order_1357">Order #1357</string>
    <string name="do_you_want_to_remove_this_request">Do you want to remove this request?</string>
    <string name="delivery_truck_icon">Delivery Truck Icon</string>


    <string-array name="roles">
        <item>Manager</item>
        <item>Supplier</item>
    </string-array>
</resources>
