<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliveries"
                android:textColor="@color/tokiBlack"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/deliveriesnav3"
                android:src="@drawable/deliveries_nav3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:contentDescription="@string/sortbyic"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/sort_icon"
                android:contentDescription="@string/sortbyic"
                android:layout_gravity="center_vertical|start"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/sortby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:entries="@array/sort_options"
                android:minHeight="48dp"
                android:prompt="@string/sort_by_prompt"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/table_bg"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:clipToPadding="false"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/deliveries_order_id1989"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_id_1989"
                        android:textColor="@color/tokiBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deliveries_cancelled1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/cancelled"
                        android:textColor="@color/tokiRed"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/supplier_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/supplier"
                        android:textColor="@color/tokiBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/z"
                        android:textColor="@color/tokiGray"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/tokiGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/order_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_s"
                        android:textColor="@color/tokiBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/quantity"
                        android:textColor="@color/tokiBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/tokiGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/orderlist1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tofu"
                    android:textColor="@color/tokiGray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/orderlist2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/_10_kg"
                    android:textColor="@color/tokiGray"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/table_bg"
            android:padding="16dp"
            android:layout_margin="4dp"
            android:clipToPadding="false"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/deliveries_order_id1976"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_id_1976"
                    android:textColor="@color/tokiBlack"
                    android:textStyle="bold"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/deliveries_cancelled2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/cancelled"
                    android:textColor="@color/tokiRed"
                    android:textStyle="bold"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/supplier_text2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/supplier"
                    android:textColor="@color/tokiBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/y"
                    android:textColor="@color/tokiGray"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/tokiGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/order_quantity2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_s"
                        android:textColor="@color/tokiBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/quantity2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/quantity"
                        android:textColor="@color/tokiBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/tokiGray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/orderlist1.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/garlic"
                    android:textColor="@color/tokiGray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/orderlist2.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/_20kg"
                    android:textColor="@color/tokiGray"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>








    </LinearLayout>
</ScrollView>
